# ChipSum

./: .gitignore  .gitmodules  CMakeLists.txt  ChipSum.hpp  INSTALL.txt  LICENSE  README.md  README_CN.md  README_en.md  Testconfig.h.in  makefile  perf_test.cpp  setup.MD  setup.py  spilu.cpp  test.cpp  test.cpp.autosave  test1.cpp  test2.cpp
ChipSum-build/include/: crs_kokkoskernels_impl.hpp  dense_matrix.hpp  densemat_serial_impl.hpp  numeric_traits.hpp  sparse_matrix_types.h  vector.hpp  vector_kokkoskernels_impl.hpp  vector_serial_impl.hpp
chipsum/: CMakeCache.txt  CMakeLists.txt  ChipSumConfig.h  chipsum_macro.h
chipsum/backend/: .backend.hpp.swp  CMakeLists.txt  backend.cpp  backend.hpp
chipsum/common/: CMakeLists.txt  bmp_writer.cpp  bmp_writer.h  coo_reader.hpp  data_types.hpp  enviroment.hpp  png_writer.hpp
chipsum/distribution/: d_sparse_matrix.hpp
chipsum/numeric/: .operator.hpp.swp  .sparse_matrix.hpp.swp  CMakeLists.txt  SparseMatrix.hpp  dense_matrix.hpp  dense_matrix.hpp.bak  numeric_traits.hpp  scalar.hpp  sparse_matrix.hpp  sparse_matrix_types.h  tensor.hpp  vector.cpp  vector.hpp
chipsum/numeric/impl/: .crs_kokkoskernels_impl.hpp.swp  CMakeLists.txt  crs_kokkoskernels_impl.hpp  crs_serial_impl.hpp  csr_kokkoskernels_impl.hpp  csr_kokkoskernels_spgemm_impl.hpp  csr_serial_impl.hpp  densemat_blas_impl.cpp  densemat_blas_impl.hpp  densemat_kokkoskernels_impl.hpp  densemat_serial_impl.hpp  dualvector_kokkoskernels_impl.hpp  impl_abstract.hpp  scalar_cuda_impl.hpp  scalar_kokkoskernels_impl.hpp  scalar_serial_impl.hpp  vector_dual_kokkos_impl.hpp  vector_impl.hpp  vector_kokkoskernels_impl.hpp  vector_serial_impl.hpp
chipsum/numeric/impl/cuda/: CMakeLists.txt  vector_cuda_impl.hpp
chipsum/numeric/impl/kokkoskernels/: .csr_kokkoskernels_spmv_impl.hpp.swp  CMakeLists.txt  csr_kokkoskernels_impl.hpp  csr_kokkoskernels_spadd_impl.hpp  csr_kokkoskernels_spgemm_impl.hpp  csr_kokkoskernels_spmv_impl.hpp  csr_kokkoskernels_sptrsv_impl.hpp  densemat_kokkoskernels_gemm_impl.hpp  densemat_kokkoskernels_gemv_impl.hpp  densemat_kokkoskernels_hessenberg_impl.hpp  densemat_kokkoskernels_impl.hpp  densemat_kokkoskernels_lu_impl.hpp  densemat_kokkoskernels_qr_impl.hpp  densemat_kokkoskernels_scal_impl.hpp  densemat_kokkoskernels_trmm_impl.hpp  densemat_kokkoskernels_trsm_impl.hpp  densemat_kokkoskernels_trtri_impl.hpp  scalar_kokkoskernels_impl.hpp  tensor_kokkoskernels_gemm_impl.hpp  tensor_kokkoskernels_gemv_impl.hpp  tensor_kokkoskernels_impl.hpp  tensor_kokkoskernels_lu_impl.hpp  tensor_kokkoskernels_qr_impl.hpp  vector_kokkoskernels_axpby_impl.hpp  vector_kokkoskernels_dot_impl.hpp  vector_kokkoskernels_fill_impl.hpp  vector_kokkoskernels_iamax_impl.hpp  vector_kokkoskernels_impl.hpp  vector_kokkoskernels_nrm1_impl.hpp  vector_kokkoskernels_nrm2_impl.hpp  vector_kokkoskernels_nrminf_impl.hpp  vector_kokkoskernels_reciprocal_impl.hpp  vector_kokkoskernels_scal_impl.hpp  vector_kokkoskernels_sum_impl.hpp
chipsum/numeric/impl/serial/: CMakeLists.txt  coo_serial_impl.hpp  csr_serial_impl.hpp  csr_serial_spmv_impl.hpp  densemat_serial_gemm_impl.hpp  densemat_serial_impl.hpp  scalar_serial_impl.hpp  vector_serial_axpby_impl.hpp  vector_serial_impl.hpp  vector_serial_nrm1_impl.hpp  vector_serial_nrm2_impl.hpp  vector_serial_scal_impl.hpp
chipsum/prototype/: .serial_mpi_spmv.cxx.swn  .serial_mpi_spmv.cxx.swo  .serial_mpi_spmv.cxx.swp  README.md  app  proto_cuda_light_spmv.cxx  serial_mpi_spmv.cxx
chipsum/solver/: CMakeLists.txt  bicg.hpp  bicgstab.hpp  cg.hpp  gmres.hpp
data/: A.mtx  b.csv
doc/: .Doxyfile.swp  .README.md.swo  .gitignore  Doxyfile  Doxyfile_CN  README.md  READMEN.md  requirement.txt
doc/html/: annotated.html  classChipSum_1_1Numeric_1_1DenseMatrix-members.html  classChipSum_1_1Numeric_1_1DenseMatrix.html  classChipSum_1_1Numeric_1_1DenseMatrix_3_01ScalarType_00_01SizeType_00_01BackendType_00_01Props_8_8_8_01_4-members.html  classChipSum_1_1Numeric_1_1DenseMatrix_3_01ScalarType_00_01SizeType_00_01BackendType_00_01Props_8_8_8_01_4.html  classChipSum_1_1Numeric_1_1Scalar-members.html  classChipSum_1_1Numeric_1_1Scalar.html  classChipSum_1_1Numeric_1_1Scalar_3_01ScalarType_00_01SizeType_00_01BackendType_00_01Props_8_8_8_01_4-members.html  classChipSum_1_1Numeric_1_1Scalar_3_01ScalarType_00_01SizeType_00_01BackendType_00_01Props_8_8_8_01_4.html  classChipSum_1_1Numeric_1_1SparseMatrix-members.html  classChipSum_1_1Numeric_1_1SparseMatrix.html  classChipSum_1_1Numeric_1_1SparseMatrix_3_01ScalarType_00_01SizeType_00_01SpFormat_00_01BackendTd4a5ef7f0d340950849c61a96845959b.html  classChipSum_1_1Numeric_1_1SparseMatrix_3_01ScalarType_00_01SizeType_00_01SpFormat_00_01BackendType_00_01Props_8_8_8_01_4.html  classChipSum_1_1Numeric_1_1Vector-members.html  classChipSum_1_1Numeric_1_1Vector.html  classes.html  dense__matrix_8hpp.html  files.html  (+28 more)
examples/: CMakeLists.txt  ex1.cpp  ex3.cpp  hessenberg.cpp  mnist.cpp  qr.cpp
examples/chipsumAI/: CMakeLists.txt  README.md  mnist.cpp
examples/chipsumAI/mnist/kernels/: densemat_kokkoskernels_activation_impl.hpp  densemat_kokkoskernels_dense_impl.hpp  densemat_kokkoskernels_norm_impl.hpp  densemat_kokkoskernels_relu_impl.hpp
examples/chipsumSolver/: bicg.cpp  bicgstab.cpp  cg.cpp  gmres.cpp  lu.cpp  perf_cg.cpp  perf_solver.cpp  qr.cpp  spilu.cpp
examples/matrix/: bicgstab.cpp  cg.cpp  gmres.cpp  hessenberg.cpp  lu.cpp  qr.cpp  trmm.cpp  trsm.cpp  trtri.cpp
examples/mnist/kernels/: densemat_kokkoskernels_activation_impl.hpp  densemat_kokkoskernels_dense_impl.hpp
examples/sparse/: CMakeLists.txt  spadd.cpp  spilu.cpp  sptrsv.cpp
examples/sparse/chipsumSolver/: CMakeLists.txt  bicg.cpp  bicgstab.cpp  cg.cpp  gmres.cpp
examples/vector/: axpby.cpp  dot.cpp
perf_test/: dot.cpp  gemm.cpp  perf_axpby.cpp  perf_cg.cpp  perf_dot.cpp  perf_gemm.cpp  perf_gemv.cpp  perf_spmv.cpp  perf_test.cpp
tests/: CMakeLists.txt  check.cpp  check1.cpp  check2.cpp  test.cpp  test1.cpp  test2.cpp  test3.cpp
unit_test/: vector_fill.cpp  vector_iamax.cpp  vector_norminf.cpp  vector_reciprocal.cpp  vector_sum.cpp
(+82 files in other folders)
