



list(APPEND SRCS "${CMAKE_CURRENT_SOURCE_DIR}/backend.cpp")
list(APPEND HDRS "${CMAKE_CURRENT_SOURCE_DIR}/backend.hpp")


install(FILES ${HDRS} DESTINATION  ${CMAKE_INSTALL_PREFIX}/include/chipsum/backend)

set(SOURCES ${SOURCES} ${SRCS} PARENT_SCOPE)
set(HEADERS ${HEADERS} ${HDRS} PARENT_SCOPE)


